# Django_1.0

./: README.md  catalog_fixture.json  pyproject.toml
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py
config/: asgi.py  settings.py  urls.py  wsgi.py
