[tool.poetry]
name = "django-1-0"
version = "0.1.0"
description = ""
authors = ["Nikita <nikkitos.pershin.2000@mail.ru>"]
readme = "README.md"
packages = [{include = "django_1"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
